fixed text wrapping

--- a/find_classes_page/Slider/TimeSlider.css
+++ b/find_classes_page/Slider/TimeSlider.css
@@ -11,6 +11,8 @@
     text-align: center;
     color: black;
     width: 6vw;
+    min-width: fit-content;
+    white-space: nowrap;
 
 }
 
